Update directory structure - encoding

--- a/xai_skl_lgbm.ipynb
+++ b/xai_skl_lgbm.ipynb
@@ -264,20 +264,20 @@
    "source": [
     "### Directory structure for FastAPI server\n",
     "\n",
-    "📁 model<br>\n",
-    "└──📁 training<br>\n",
-    "└────📋 Dockerfile<br>\n",
-    "└────📋 requirements.txt<br>\n",
-    "└────📁 trainer<br>\n",
-    "└──────📋 train.py<br>\n",
+    "[] model<br>\n",
+    "---[] training<br>\n",
+    "------| Dockerfile<br>\n",
+    "------| requirements.txt<br>\n",
+    "------[] trainer<br>\n",
+    "---------| train.py<br>\n",
     "\n",
-    "└──📁 inference<br>\n",
-    "└────📋 Dockerfile<br>\n",
-    "└────📋 requirements.txt<br>\n",
-    "└────📁 app<br>\n",
-    "└──────📋 main.py<br>\n",
-    "└──────📋 server.py<br>\n",
-    "└──────📋 prestart.sh<br>"
+    "---[] inference<br>\n",
+    "------| Dockerfile<br>\n",
+    "------| requirements.txt<br>\n",
+    "------[] app<br>\n",
+    "---------| main.py<br>\n",
+    "---------| server.py<br>\n",
+    "---------| prestart.sh<br>"
    ]
   },
   {
